<resources>
    <string name="app_name">How old am I today ?</string>
    <string name="string_app_title">How old am I today ?</string>
    <string name="string_buttonStart">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_birthInfo">Pick your birth date</string>
    <string name="string_buttonCalculate">Calculate</string>
    <string name="itemTitle_about">About</string>
    <string name="itemTitle_contact">Contact</string>
    <string name="about_text">This application shows how old you are today. \n
With a carefully chosen sentences about life, you will let yourself reflect upon your time and life itself.
</string>
    <string name="textView_contactHeader">Get in Touch</string>
    <string name="textView_contactSubHeader">Feel free to drop me a line below!</string>
    <string name="editText_firstName">Your name</string>
    <string name="editText_Email">E-mail</string>
    <string name="editText_comment">Any comment on your mind</string>
    <string name="button_sendInContact">send</string>
</resources>